--- a/apps/fabric-website-resources/src/components/pages/ColorsPage.global.scss
+++ b/apps/fabric-website-resources/src/components/pages/ColorsPage.global.scss
@@ -1,74 +1,114 @@
 @import '~office-ui-fabric-react/src/common/common';
 :global {
-  .overview .themeGeneratorPageLink {
-    color: $ms-color-themePrimary;
+  body {
+    --default-background: black;
+    --default-text: black;
+    --default-border: black;
+
+    --oldButton-background: black;
+    --oldButton-text: black;
+    --oldButton-border: black;
+    --oldButton-background-hovered: black;
+    --oldButton-text-hovered: black;
+    --oldButton-border-hovered: black;
+
+    --newButton-background: black;
+    --newButton-text: black;
+    --newButton-border: black;
+    --newButton-background-hovered: black;
+    --newButton-text-hovered: black;
+    --newButton-border-hovered: black;
+
+    --accentButton-background: black;
+    --accentButton-text: black;
+    --accentButton-border: black;
+    --accentButton-background-hovered: black;
+    --accentButton-text-hovered: black;
+    --accentButton-border-hovered: black;
   }
 
-  .ms-themer {
-    padding: 12px;
-    h2,
-    h3,
-    h4 {
-      color: $ms-color-black;
-    }
-  }
-  .ms-themer h3 {
-    margin: 0;
+  #page,
+  #header,
+  #nav1,
+  #nav2,
+  #pageContent {
+    background: var(--default-background);
+    color: var(--default-text);
   }
 
-  .ms-themer-paletteSlot {
-    text-align: center;
-    padding: 16px;
+  #page {
+    width: 1000px;
+    height: 300px;
+    font-size: 14px;
+    border: 2px dashed black;
+    padding-top: 200px;
+    position: relative;
+
+    display: flex;
+    align-items: stretch;
   }
 
-  .ms-themer-swatch {
-    display: inline-block;
-    flex-shrink: 0;
-    height: 36px;
-    width: 36px;
+  #header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 200px;
+  }
+
+  #nav1,
+  #nav2 {
+    width: 16.6%;
+  }
+
+  #pageContent {
+    flex-grow: 1;
+  }
+
+  hr {
+    border: none;
+    border-top: 1px solid var(--default-border);
+  }
+
+  button {
+    font-family: inherit;
+    font-size: inherit;
     margin: 4px;
+    min-width: 60px;
+    padding: 4px;
+    border-radius: 2px;
   }
 
-  .ms-themer-swatchBg {
-    padding: 4px;
-    font-size: 0;
-    .ms-themer-swatch {
-      height: 28px;
-      width: 28px;
-      margin: 2px;
+  button.old {
+    background: var(--oldButton-background);
+    color: var(--oldButton-text);
+    border: 1px solid var(--oldButton-border);
+    &:hover {
+      background: var(--oldButton-background-hovered);
+      color: var(--oldButton-text-hovered);
+      border: 1px solid var(--oldButton-border-hovered);
     }
   }
 
-  .ms-themer-example {
-    padding: 20px;
-  }
-
-  .ms-themer-fabricPalette-root {
-    display: flex;
-    > div {
-      padding-left: 20px;
+  button.new {
+    background: var(--newButton-background);
+    color: var(--newButton-text);
+    border: 1px solid var(--newButton-border);
+    &:hover {
+      background: var(--newButton-background-hovered);
+      color: var(--newButton-text-hovered);
+      border: 1px solid var(--newButton-border-hovered);
     }
   }
 
-  .ms-themer-accessibilityTable td {
-    padding: 4px;
-    text-align: center;
-  }
-
-  .ms-themer-slot {
-    display: flex;
-    align-items: center;
-    overflow: auto;
-  }
-
-  .ms-themer-output-root {
-    display: flex;
-    textarea {
-      height: 400px;
-      width: 280px;
-      margin-right: 28px;
-      background-color: white;
-      color: #333;
+  button.accent {
+    background: var(--accentButton-background);
+    color: var(--accentButton-text);
+    border: 1px solid var(--accentButton-border);
+    &:hover {
+      background: var(--accentButton-background-hovered);
+      color: var(--accentButton-text-hovered);
+      border: 1px solid var(--accentButton-border-hovered);
     }
   }
 }
